# deskop-nano-cortex

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .markdownlint-cli2.jsonc  .npmrc  .prettierignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  commitlint.config.cjs  justfile  knip.jsonc  lint-staged.config.mjs  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: Cargo.toml  Info.plist  deny.toml  entitlements.plist  rustfmt.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: lib.rs  main.rs
backend/src/app/: config.rs  error.rs  mod.rs  state.rs
backend/src/domain/: device.rs  footswitch.rs  midi_message.rs  mod.rs  nano_state.rs  port.rs  settings.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/midi/: ble.rs  ble_debug.rs  ble_decoder.rs  ble_encoder.rs  ble_inspector.rs  ble_schema.rs  ble_sync.rs  connection.rs  listener.rs  mod.rs  port_manager.rs  port_watchdog.rs
backend/src/ipc/: commands.rs  events.rs  mapping.rs  mod.rs
backend/src/platform/: mod.rs  settings_store.rs  shortcuts.rs  tray.rs
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: check-licenses.mjs  check-traceability.mjs  sync-version.mjs
(+127 files in other folders)
